# agent-digest

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
src/agent_digest/: __init__.py  data_digest.py  decorators.py  report.py  text_digest.py
src/agent_digest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_agent_digest.py
